# AISL-MuJoCo

./: .gitignore  01_tutorial_hello_mujoco.py  03_tutorial_joint.py  05_tutorial_keyframe.py  07_tutorial_friction.py
src/goat/: package.xml  setup.cfg  setup.py
src/goat/config/double_pendulum/: async_simulator.yaml  double_pendulum.xml  simulator.yaml  sync_simulator.yaml
src/goat/config/goat/: async_simulator.yaml  goat.xml  sync_simulator.yaml
src/goat/config/goat/meshes/: GOAT_gochu_stand7mm35cm.stl  GOAT_gochu_stand7mm35cmd.stl  calf_L_Link.stl  calf_R_Link.stl  hip_L_Link.stl  hip_R_Link.stl  thigh_L_Link.stl  thigh_R_Link.stl  wheel_L_Link.stl  wheel_R_Link.stl
src/goat/goat/nodes/: async_simulator_node.py  simulator_node.py  sync_simulator_node.py  test_commander_node.py
src/goat/goat/utils/: mujoco_sim.py  ros_bridge.py
src/goat/launch/: async_simulator.launch.py  simulator.launch.py  sync_simulator.launch.py
tutorials/: 02_tutorial_key_binding.py  04_tutorial_model_data_inspection.py  06_tutorial_contact_force.py  08_tutorial_actuator.py  09_tutorial_sensor.py  10_tutorial_external_force.py  11_tutorials_recording.py
